added login and registration

--- a/.env
+++ b/.env
@@ -42,3 +42,8 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/charge_it?serverVersion=mariadb-10.4.2
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+ MAILER_DSN=gmail://pascuionutalexandru@gmail.com:AlexPascu2002@default?verify_peer=0
+###< symfony/google-mailer ###
